syntax = "proto3";

option csharp_namespace = "Proto.Command.TimerSettings";


service TimerSettingsCommandProtoService {
  rpc ChangeDocuTimerSaveInterval (ChangeDocuTimerSaveIntervalCommandProto) returns (CommandResponse);
  rpc ChangeSnapshotSaveInterval (ChangeSnapshotSaveIntervalCommandProto) returns (CommandResponse);
  rpc CreateTimerSettings (CreateTimerSettingsCommandProto) returns (CommandResponse);
}

message ChangeDocuTimerSaveIntervalCommandProto {
  string timerSettingsId = 1;
  int32 docuTimerSaveInterval = 2;
}

message ChangeSnapshotSaveIntervalCommandProto {
  string timerSettingsId = 1;
  int32 snapshotSaveInterval = 2;
}

message CreateTimerSettingsCommandProto {
  string timerSettingsId = 1;
  int32 documentationSaveInterval = 2;
  int32 snapshotSaveInterval = 3;
}

message CommandResponse {
  bool success = 1;
}
